# simplifiedGLAD

./: CMakeLists.txt  README.md
